src/test/ui/associated-types/hr-associated-type-bound-param-1.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-1.rs:14:14
   |
LL |     type V = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the following implementations were found:
             <String as Clone>
note: required by a bound in `Y`
  --> $DIR/hr-associated-type-bound-param-1.rs:4:36
   |
LL | trait Y<'a, T: ?Sized>
   |       - required by a bound in this
...
LL |     for<'b> <Self as Y<'b, T>>::V: Clone,
   |                                    ^^^^^ required by this bound in `Y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
